--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@nuxt/fonts": "^0.10.3",
+    "@nuxt/image": "^1.8.1",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@vueuse/motion": "^2.2.6",
     "nuxt": "^3.14.1592",
     "nuxt-icons": "^3.2.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue3-marquee": "^4.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
