--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/image": "^1.8.1",
+    "@nuxt/scripts": "^0.9.5",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@vueuse/motion": "^2.2.6",
     "nuxt": "^3.14.1592",
@@ -19,6 +20,7 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "latest",
     "vue-router": "latest",
+    "vue-sonner": "^1.3.0",
     "vue3-marquee": "^4.2.2"
   },
   "devDependencies": {
