--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/image": "^1.8.1",
     "@nuxt/scripts": "^0.9.5",
+    "@nuxthub/core": "^0.8.10",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@vueuse/motion": "^2.2.6",
     "nuxt": "^3.14.1592",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49"
+    "postcss": "^8.4.49",
+    "wrangler": "^3.97.0"
   }
 }
